feat: delay crawler from starting

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ TICKET_TYPE=LUCKY_PICK
 TICKET_NUMBERS=1,2,3,4,5,6
 PCSO_BASE_URL=https://elotto.pcso.gov.ph
 BROWSER_PATH=
+
+CRAWLER_RANDOM_DELAY_FROM_SECONDS=-1
+CRAWLER_RANDOM_DELAY_TO_SECONDS=-1
